--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -407,11 +407,53 @@ users/user7.png: users/user7-2b62392a3555000f7ff0e1c1d8075819.png
 users/user7/index.png: users/user7-2b62392a3555000f7ff0e1c1d8075819.png
 admin/application.js: admin/application-c12f2fffcc73ac3e0d9133a2d6d06d6b.js
 admin/application/index.js: admin/application-c12f2fffcc73ac3e0d9133a2d6d06d6b.js
+admin/excanvas.js: admin/excanvas-920799e091520894d62e6d202534efc7.js
+admin/excanvas/index.js: admin/excanvas-920799e091520894d62e6d202534efc7.js
+admin/home.js: admin/home-a7fa98ba2ef09a5dcc079d3f014a4e3c.js
+admin/home/index.js: admin/home-a7fa98ba2ef09a5dcc079d3f014a4e3c.js
+admin/html5shiv.js: admin/html5shiv-c1e866803d5f704366e8c085b8095cb7.js
+admin/html5shiv/index.js: admin/html5shiv-c1e866803d5f704366e8c085b8095cb7.js
+admin/ie_fix.js: admin/ie_fix-ab56bb6d12d2c281e7a87b1c4efacbd0.js
+admin/ie_fix/index.js: admin/ie_fix-ab56bb6d12d2c281e7a87b1c4efacbd0.js
 application.js: application-a511ea1545824440d723123402e011a5.js
 application/index.js: application-a511ea1545824440d723123402e011a5.js
+html5.js: html5-5a0c2e1f99b73358244b84719fa73517.js
+html5/index.js: html5-5a0c2e1f99b73358244b84719fa73517.js
+user_passwords.js: user_passwords-a7fa98ba2ef09a5dcc079d3f014a4e3c.js
+user_passwords/index.js: user_passwords-a7fa98ba2ef09a5dcc079d3f014a4e3c.js
+user_registrations.js: user_registrations-a7fa98ba2ef09a5dcc079d3f014a4e3c.js
+user_registrations/index.js: user_registrations-a7fa98ba2ef09a5dcc079d3f014a4e3c.js
+user_sessions.js: user_sessions-a7fa98ba2ef09a5dcc079d3f014a4e3c.js
+user_sessions/index.js: user_sessions-a7fa98ba2ef09a5dcc079d3f014a4e3c.js
 admin/application.css: admin/application-35a7fec20e32f385e60e59e01b132bb2.css
 admin/application/index.css: admin/application-35a7fec20e32f385e60e59e01b132bb2.css
+admin/font-awesome.css: admin/font-awesome-709a767b681f23c8da75d214804a910f.css
+admin/font-awesome/index.css: admin/font-awesome-709a767b681f23c8da75d214804a910f.css
+admin/ie_fix.css: admin/ie_fix-07a7dd402923c44c7b2d14858b502df8.css
+admin/ie_fix/index.css: admin/ie_fix-07a7dd402923c44c7b2d14858b502df8.css
 application.css: application-905c5129b56f40c51b8e4b86802049a0.css
 application/index.css: application-905c5129b56f40c51b8e4b86802049a0.css
+bootstrap-responsive.min.css: bootstrap-responsive.min-54059cb8a81241a6020d89dd40b02777.css
+bootstrap-responsive/index.min.css: bootstrap-responsive.min-54059cb8a81241a6020d89dd40b02777.css
+bootstrap.min.css: bootstrap.min-e4c3ed9515fee882c1a76ef9e9d7199f.css
+bootstrap/index.min.css: bootstrap.min-e4c3ed9515fee882c1a76ef9e9d7199f.css
+theme-desktop.css: theme-desktop-f71fcdcc6b7e0d010fd765769642a4ce.css
+theme-desktop/index.css: theme-desktop-f71fcdcc6b7e0d010fd765769642a4ce.css
+theme-phone.css: theme-phone-ff7226a15e286f0c93c08f1ce80768cd.css
+theme-phone/index.css: theme-phone-ff7226a15e286f0c93c08f1ce80768cd.css
+theme-tablet.css: theme-tablet-eb963bd1ad931293a1c874109b31ab15.css
+theme-tablet/index.css: theme-tablet-eb963bd1ad931293a1c874109b31ab15.css
+jquery-ui.js: jquery-ui-4856b8d4fb395706be8d907efda018e4.js
+jquery-ui/index.js: jquery-ui-4856b8d4fb395706be8d907efda018e4.js
+jquery-ui.min.js: jquery-ui.min-28c6a8bb2a5472bfe2d682048318dada.js
+jquery-ui/index.min.js: jquery-ui.min-28c6a8bb2a5472bfe2d682048318dada.js
+jquery.js: jquery-08bbde0e2625ba65b3f4d03e5cf1c05d.js
+jquery/index.js: jquery-08bbde0e2625ba65b3f4d03e5cf1c05d.js
+jquery.min.js: jquery.min-3f7a268ed7e5fabac831ad91006b951e.js
+jquery/index.min.js: jquery.min-3f7a268ed7e5fabac831ad91006b951e.js
 jquery.min.map: jquery.min-6c267bfd2b3f36e6edccb2e584934c1c.map
 jquery/index.min.map: jquery.min-6c267bfd2b3f36e6edccb2e584934c1c.map
+jquery_ujs.js: jquery_ujs-a3266ec390218bd1ea234887ff70ab4e.js
+jquery_ujs/index.js: jquery_ujs-a3266ec390218bd1ea234887ff70ab4e.js
+coffee-script.js: coffee-script-48d76af6b41e787636717279ccc41353.js
+coffee-script/index.js: coffee-script-48d76af6b41e787636717279ccc41353.js
